feat: Add financial report generation
Integrates jspdf and jspdf-autotable to allow users to generate financial reports for a selected month. This feature provides a downloadable PDF summary of session income, status, and payment details.

Also updates dependencies and imports related to this new functionality.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.554.0",
     "recharts": "^3.5.0",
-    "firebase": "^12.6.0"
+    "firebase": "^12.6.0",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
